--- a/lv5/style.css
+++ b/lv5/style.css
@@ -1,6 +1,10 @@
 body{
     font-family: 'Noto Sans TC', sans-serif;
 }
+ul{
+    list-style: none;
+    padding:0;
+}
 h1{
     font-size: 40px;
     line-height: 60px;
