--- a/lv9/style.css
+++ b/lv9/style.css
@@ -6,14 +6,16 @@ body{
 }
 #app{
     overflow: hidden;
+    position: relative;
+    transform: translateY(20px);
 }
-.material-icons{
-    font-size: 32px !important;
+.md-36{
+    font-size: 36px;
 }
 .turntable{
     width: 540px;
     height: 540px;
-    transform: translateY(20px) rotate(-30deg);
+    transform:rotate(-30deg);
     position: relative;
     margin: 0 auto;
 }
@@ -39,7 +41,6 @@ li{
     width: 50%;
     height: 100%;
     transform-origin: right center;
-    transform: rotate(60deg);
     background-color:#F0BEFF;
     color:#343BAA;
     position: relative;
@@ -51,7 +52,7 @@ li{
     align-items: center;
     flex-direction: column;
     top:60px;
-    right:40%;
+    right:35%;
     transform-origin: right center;
     transform:rotate(-30deg) translateX(50%)
 }
@@ -59,22 +60,16 @@ li:nth-child(even)>.inner{
     background-color: #343BAA;
     color:#F0BEFF;
 }
-li:nth-child(2){
-    transform:rotate(60deg);
-}
-li:nth-child(3){
-    transform:rotate(120deg);
-}
-li:nth-child(4){
-    transform:rotate(180deg);
-}
-li:nth-child(5){
-    transform:rotate(240deg);
-}
-li:nth-child(6){
-    transform:rotate(300deg);
+.btn,.btn-hand,.btn-hand::after,.streamer{
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
 }
 .btn{
+    z-index: 10;
     width: 128px;
     height: 128px;
     border-radius: 50%;
@@ -82,40 +77,57 @@ li:nth-child(6){
     background-color: #1F1172;
     font-size: 32px;
     font-weight: bold;
-    position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    margin:auto;
     text-align: center;
     line-height: 128px;
-    cursor: pointer;
+    cursor: pointer;   
+}
+.btn:hover {
+    background-color: white;
+}
+.btn:active {
+    background-color: rgb(0, 16, 151);
 }
 .btn-hand{
     width: 1px;
     height: 1px;
-    position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    margin:auto;
-    background-color: red;
 }
 .btn-hand::after{
     content:"";
-    position: absolute;
     width: 256px;
     height: 256px;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    margin:auto;
     transform: translate(-50% , -19%);
     background-image: url('./hand.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+}
+.anim {
+    transition-timing-function: Ease-in-out;
+    transition: transform 3s;
+}
+.streamer{
+    background-color: #343BAA;
+    color:white;
+    height: 40%;
+    z-index: -1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.center{
+    width: 540px;
+    height: 540px;
+}
+.left{
+    font-size: 72px;
+}
+.right{
+    font-size: 32px;
+    transform: translateX(60px);
+}
+.choicedPrizeName{
+    font-size: 72px;
+    color:#FF00BA;
+    text-decoration: underline;
 }
