--- a/lv3/style.css
+++ b/lv3/style.css
@@ -3,14 +3,14 @@
 }
 body{
     background: #E8E8E8;
-    height: 100vh;
     color:white;
     display: flex;
     justify-content: center;
     align-items: center;  
 }
 .calculator{
-    width: 350px;
+    margin-top: 50px;
+    max-width: 350px;
     background: #062145;
     border-radius: 20px;
     box-shadow: 0px 20px 40px #00000066;
@@ -41,7 +41,6 @@ body{
     flex-wrap: wrap;
     justify-content: space-between;
     font-size: 24px;
-
 }
 li{
     width: 72px;
