--- a/lv5/style.css
+++ b/lv5/style.css
@@ -81,6 +81,10 @@ h2{
     background: black;
     line-height: 22px;
     padding:6px 0;
+    position: fixed;
+    bottom:0;
+    width: 100%;
+
 }
 
 .green{
