--- a/lv8/style.css
+++ b/lv8/style.css
@@ -1,7 +1,11 @@
-*{
+* {
     box-sizing: border-box;
 }
-body{
+input[type="button"]{
+    display: block;
+}
+
+body {
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -9,219 +13,358 @@ body{
     font-family: 'Roboto Condensed', sans-serif;
     background-color: black;
 }
-.field{
-    width:540px;
-    height: 540px;
+
+.field {
+    width: 540px;
+}
+@media (max-width:500px){
+    .field{
+        width: 300px;
+    }
 }
 
-.start-content{
+.start-content {
     margin-bottom: 40px;
     display: flex;
     flex-wrap: wrap;
-    color:white;
+    color: white;
     font-size: 100px;
     font-style: italic;
     justify-content: space-between;
 }
-.start-content>li{
-    width:160px;
-    height: 160px;
+
+.start-content>li {
+    width: 160px;
     box-sizing: border-box;
-    padding: 30px 0;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+    padding: 5% 0;
+    text-align: center;
 }
-.btn{
+
+.btn {
     width: 100%;
     text-align: center;
     font-size: 48px;
-    padding:20px 0;
+    padding: 20px 0;
     cursor: pointer;
-    border:0;
+    border: 0;
     border-radius: 8px;
 }
-.start-btn{
-    color:#FF6D70;
+.start-content-text{
+    vertical-align: middle;
+}
+.start-btn {
+    color: #FF6D70;
 }
 
-.solidcircle,.emptycircle,.emptycircle::before{
+.solidcircle,
+.emptycircle,
+.emptycircle::before {
     margin: 0 auto;
     border-radius: 50%;
-    border:4px solid #ED494C;
+    border: 4px solid #ED494C;
 }
-.emptycircle::before,.solidcross::before,.solidcross::after,
-.emptycross::before,.emptycross::after,.cover,.cover::after{
-    content:"";
+
+.emptycircle::before,
+.solidcross::before,
+.solidcross::after,
+.emptycross::before,
+.emptycross::after,
+.cover,
+.cover::after {
+    content: "";
     position: absolute;
-    top:0px;
-    bottom:0;
-    left:0;
-    right:0;
-    margin:auto;
+    top: 0px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
-.emptycircle,.solidcross,.emptycross{
+
+.emptycircle,
+.solidcross,
+.emptycross {
     position: relative;
 }
-.solidcircle{
+
+.solidcircle {
     width: 100px;
     height: 100px;
     border: 15px solid #ED494C;
 }
-.emptycircle{
-    width:120px;
+
+.emptycircle {
+    width: 120px;
     height: 120px;
 }
-.emptycircle::before{
-    width:80px;
-    height:80px;
+
+.emptycircle::before {
+    width: 80px;
+    height: 80px;
 }
-.solidcross::before,.solidcross::after,
-.emptycross::before,.emptycross::after{
-    width:18px;
+
+.solidcross::before,
+.solidcross::after,
+.emptycross::before,
+.emptycross::after {
+    width: 18px;
     height: 160px;
 }
-.solidcross::before,.solidcross::after{
+
+.solidcross::before,
+.solidcross::after {
     background-color: #ED494C;
 }
-.emptycross::before,.emptycross::after{
-    border:4px solid white;
+
+.emptycross::before,
+.emptycross::after {
+    border: 4px solid white;
 }
-.solidcross::before,.emptycross::before{
+
+.solidcross::before,
+.emptycross::before {
     transform: rotate(45deg);
 }
-.solidcross::after,.emptycross::after,.cover{ 
+
+.solidcross::after,
+.emptycross::after,
+.cover {
     transform: rotate(-45deg);
 }
-.cover,.cover::after{
+
+.cover,
+.cover::after {
     width: 17px;
     height: 28px;
     background-color: black;
-    z-index:2;
+    z-index: 2;
 }
-.cover::after{
+
+.cover::after {
     transform: rotate(-90deg);
 }
-.game-scoreboard{
+
+@media (max-width:500px) {
+    .start-content>li {
+        width: 100px;
+    }
+    .solidcircle {
+        width: 80px;
+        height: 80px;
+    }
+
+    .emptycircle {
+        width: 80px;
+        height: 80px;
+    }
+
+    .emptycircle::before {
+        width: 50px;
+        height: 50px;
+    }
+
+    .solidcross::before,
+    .solidcross::after,
+    .emptycross::before,
+    .emptycross::after {
+        width: 16px;
+        height: 100px;
+    }
+
+    .start-content {
+        font-size: 60px;
+    }
+}
+
+.game-scoreboard {
     font-size: 48px;
     margin-top: 9px;
     display: flex;
     text-align: center;
     align-items: flex-end
 }
-.game-scoreboard-player{
+
+.game-scoreboard-player {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.game-round{
+
+.game-round {
     font-size: 20px;
     line-height: 24px;
-    color:white;
+    color: white;
     width: 100%;
 }
-.icon{
-    background-color: blue;
+
+.icon {
+    background-color: black;
     padding: 2px 0 6px;
     width: 64px;
-    border:4px solid black;
+    border: 4px solid black;
     color: white;
 }
-.iconx{
+
+.iconx {
     border-radius: 8px 0px 0px 8px;
+}
+
+.icono {
+    border-radius: 0px 8px 8px 0px;
+}
+.turn {
     background-color: #ED494C;
 }
-.icono{
-    border-radius: 0px 8px 8px 0px;
-    background-color: black;
-}
-.player{
+
+.player {
     width: 171px;
     line-height: 56px;
-    background:white;
+    background: white;
     border-top: 4px solid black;
     border-bottom: 4px solid black;
 }
-.vs{
+
+.vs {
     width: 70px;
     font-size: 20px;
     padding: 24px;
-    background:black;
+    background: black;
     border-radius: 8px 8px 0px 0px;
     color: white;
 }
-.game-field{
+@media (max-width:500px){
+    .player {
+        width: 50px;
+    }
+}
+
+.game-field {
     margin-bottom: 20px;
     display: flex;
     flex-wrap: wrap;
     font-size: 94px;
     color: white;
 }
-.game-field>li{
-    width: 180px;
-    height: 180px;
+
+.game-field>li {
+    width: 160px;
+    height: 160px;
     box-sizing: border-box;
     border-bottom: 4px solid #ED494C;
-    padding: 47px;
     cursor: pointer;
+    text-align: center;
+    line-height: 160px;
 }
-.game-field>li:hover{
+
+@media (max-width:500px){
+    .game-field>li {
+        width: 100px;
+        height: 100px;
+        line-height: 100px;
+    }
+}
+.game-field>li:hover {
     background-color: #ED494C;
 }
-.game-field>li:nth-child(3n+1),.game-field>li:nth-child(3n+2){
+
+.game-field>li:nth-child(3n+1),
+.game-field>li:nth-child(3n+2) {
     border-right: 4px solid #ED494C;
 }
-.game-field>li:nth-child(n+7){
-    border-bottom:none
+
+.game-field>li:nth-child(n+7) {
+    border-bottom: none
 }
-.game-btn{
+
+.game-btn {
     background-color: #ED494C;
-    color:white;
+    color: white;
 }
-.game-winner{
+
+.game-winner {
     font-size: 400px;
-    color:#ED494C;
+    color: #ED494C;
     text-align: center;
     line-height: 540px;
     position: relative;
 }
-.game-winner::after{
+
+.game-winner::after {
     content: "WINNER!";
     position: absolute;
     font-style: italic;
     font-size: 154px;
-    color:#FF6D70;
+    color: #FF6D70;
     -webkit-text-stroke: 2px #fff;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    margin:auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
-.game-draw{
+
+.game-draw {
     font-size: 200px;
-    color:#ED494C;
+    color: #ED494C;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    margin: 100px 0;
 }
-.game-draw>.fa-times{
+
+.game-draw>.fa-times {
     font-size: 250px;
 }
-.game-draw::after{
-    content:"DRAW! \A DRAW! \A DRAW!";
+
+.game-draw::after {
+    content: "DRAW! \A DRAW! \A DRAW!";
     position: absolute;
     font-size: 154px;
     font-style: italic;
-    color:#FF6D70;
+    color: #FF6D70;
     -webkit-text-stroke: 2px #fff;
     text-align: center;
 }
 
-.d-n{
+.d-n {
     display: none;
 }
-.text-align-right{
+
+.text-align-right {
     text-align: right;
+}
+
+@media (max-width:600px){
+    input[type="button"]{
+        padding: 10px;
+        width: 80%;
+        margin: 0 auto;
+    }
+    .game-winner {
+        font-size: 300px;
+        line-height: 300px;
+    }
+    
+    .game-winner::after {
+        font-size: 80px;
+    }
+    
+    .game-draw {
+        font-size: 200px;
+        margin: 20px 0;
+    }
+    
+    .game-draw>.fa-circle {
+        font-size: 150px;
+    }
+    .game-draw>.fa-times {
+        font-size: 200px;
+    }
+    
+    .game-draw::after {
+        content: "DRAW! \A DRAW! \A DRAW!";
+        font-size: 80px;
+    }
+    
+
 }
