--- a/lv9/style.css
+++ b/lv9/style.css
@@ -23,15 +23,19 @@ body {
     height: 540px;
     position: relative;
 }
-.table17{
+
+.table17 {
     transform: rotate(-30deg);
 }
-.table18{
+
+.table18 {
     transform: rotate(-10deg);
 }
-.year-btns .bg-gray{
+
+.year-btns .bg-gray {
     background: #aaa;
 }
+
 .turntable::after {
     content: "";
     position: absolute;
@@ -177,7 +181,8 @@ li:nth-child(even)::before {
     z-index: -1;
     color: #1F1172;
 }
-.streamer .container{
+
+.streamer .container {
     position: absolute;
     width: 1200px;
     left: 0;
@@ -204,7 +209,7 @@ li:nth-child(even)::before {
     color: white;
 }
 
-.the-only-left li{
+.the-only-left li {
     clip-path: none;
 }
 
@@ -212,11 +217,14 @@ li:nth-child(even)::before {
     width: 100%;
 }
 
-.year-btns{
-    position: absolute;
+.year-btns {
+    position: fixed;
+    top: 10%;
+    left: 10%;
     z-index: 11;
-    top:10%;
+
 }
+
 .year-btns input {
     padding: 15px;
     border-radius: 5px;
@@ -225,4 +233,60 @@ li:nth-child(even)::before {
     background: #F0BEFF;
     cursor: pointer;
 
+}
+
+
+@media (max-width:768px) {
+
+    .turntable,
+    .turntable::after,
+    .streamer .center {
+        width: 270px;
+        height: 270px;
+        background-size: cover;
+    }
+
+
+    .turntable .prizeitem {
+        font-size: 16px;
+        padding-top: 15px;
+    }
+
+    .btn {
+        width: 64px;
+        height: 64px;
+        line-height: 64px;
+        font-size: 18px;
+    }
+
+    .btn-hand::after {
+        width: 128px;
+        height: 128px;
+        transform: translate(-50%, -19%);
+        background-size: contain;
+    }
+
+    .streamer {
+        height: 180px;
+    }
+
+    .streamer .left {
+        font-size: 36px;
+    }
+
+    .streamer .right {
+        font-size: 16px;
+        transform: translateX(20px);
+    }
+
+    .streamer .choicedPrizeName {
+        font-size: 36px;
+    }
+
+}
+@media (max-width:500px) {
+    .streamer{
+        display: none;
+    }
+    
 }
